# AUDITORIA360

./: .coverage  .coverage.LAPTOP-VD4J4FN7.19540.XxZNfmpx  .coveragerc  .cpanel.yml  .env.cloudsql  .env.example  .env.production  .env.template  .flake8  .gitignore  .gitleaks.toml  .htaccess  .pre-commit-config.yaml  .prettierignore  .prettierrc  =6.0.0  =9.0.0  ANALISE_COMPLEMENTAR.md  BLUEPRINT_IMPLEMENTATION.md  CERTIFICACAO_GENESIS_RELATORIO_FINAL.md  CHANGELOG.md  CHECKLIST_FINALIZACAO.md  CHECKLIST_VALIDACAO_FINAL_GENESIS.md  CNAME  COMMUNICATION_TEMPLATES.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  CONTRIBUTING_NEXTJS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_CHECKLIST.md  Dockerfile  GRAND_TOMO_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INVENTARIO_ANALISE.md  LEGACY_INVENTORY.md  MANUAL_SUPREMO.md  MANUAL_TESTE_IA_EVOLUCAO.md  MASTER_EXECUTION_CHECKLIST_REPORT.md  METAMORFOSE_RELATORIO_FINAL.md  (+109 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.streamlit/: config.toml  secrets.toml.template
AUDITORIA360_patches_v2/: README.md  README_DOWNLOAD.txt
api/: DEPRECATED.md  dashboard.py  deprecation_middleware.py  index.py
apps/: __init__.py
assets/: README-hero-bg.txt  README.md  README_prints_checklist.md  bootstrap-grid.css  custom.css  monitoring.css  style.css
auth/: README.md  gestor_contas.example.json  gestor_contas.json  login.example.yaml  login.yaml
automation/: README.md  backup_routine.py  backup_validation.py  cron_comunicados.py  cron_legislacao.py  enhanced_robot_esocial.py  generate_badges.py  onboarding.py  (+10 more)
(+1775 files in other folders)
